--- a/practicaFinal/src/main/resources/templates/admin.html
+++ b/practicaFinal/src/main/resources/templates/admin.html
@@ -161,7 +161,16 @@
 </head>
 
 <body>
-	ADMIN
+	<form th:action="@{/addUser}" id="loginform" method="POST">
+		<input type=" text" name="username" placeholder="usuario" required>
+		<input type="password" placeholder="Contraseña" name="password" required>
+		<select name="rol" required>
+			<option value="1">admin</option>
+			<option value="2" selected>advanced</option>
+			<option value="3">basic</option>
+		</select>
+		<button type="submit" title="Crear" name="Crear">Create user</button>
+	</form>
 </body>
 
 </html>
