Added admin.html updated

--- a/practicaFinal/src/main/resources/templates/admin.html
+++ b/practicaFinal/src/main/resources/templates/admin.html
@@ -10,169 +10,126 @@
 
 	<title> Formulario de Acceso </title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<meta name="author" content="Videojuegos & Desarrollo">
-	<meta name="description" content="Muestra de un formulario de acceso en HTML y CSS">
-	<meta name="keywords" content="Formulario Acceso, Formulario de LogIn">
+	<meta content="Videojuegos & Desarrollo" name="author">
+	<meta content="Muestra de un formulario de acceso en HTML y CSS" name="description">
+	<meta content="Formulario Acceso, Formulario de LogIn" name="keywords">
 
 	<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
+	<link href="images/icons/favicon.ico" rel="icon" type="image/png"/>
+	<!--===============================================================================================-->
+	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<!--===============================================================================================-->
+	<link href="fonts/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<!--===============================================================================================-->
+	<link href="vendor/animate/animate.css" rel="stylesheet" type="text/css">
+	<!--===============================================================================================-->
+	<link href="vendor/select2/select2.min.css" rel="stylesheet" type="text/css">
+	<!--===============================================================================================-->
+	<link href="vendor/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet" type="text/css">
+	<!--===============================================================================================-->
+	<link href="../css/util.css" rel="stylesheet" type="text/css">
+	<link href="../css/main.css" rel="stylesheet" type="text/css">
+	<!--===============================================================================================-->
 
 
 	<style type="text/css">
-		body {
-			font-family: 'Overpass', sans-serif;
-			font-weight: normal;
-			font-size: 100%;
-			color: #1b262c;
+		/*//////////////////////////////////////////////////////////////////
+		[ FONT ]*/
 
-			margin: 0;
-			background-color: #0f4c75;
-		}
+		#addUsers{display:none;}
+		#editUser{display:none;}
+		#delUser{display:none;}
 
-		#contenedor {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-
-			margin: 0;
-			padding: 0;
-			min-width: 100vw;
-			min-height: 100vh;
-			width: 100%;
-			height: 100%;
-		}
-
-		#central {
-			max-width: 320px;
-			width: 100%;
-		}
-
-		.titulo {
-			font-size: 250%;
-			color: #bbe1fa;
-			text-align: center;
-			margin-bottom: 20px;
-		}
-
-		#login {
-			width: 100%;
-			padding: 50px 30px;
-			background-color: #3282b8;
-
-			-webkit-box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
-			-moz-box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
-			box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
-
-			border-radius: 3px 3px 3px 3px;
-			-moz-border-radius: 3px 3px 3px 3px;
-			-webkit-border-radius: 3px 3px 3px 3px;
-
-			box-sizing: border-box;
-		}
-
-		#login input {
-			font-family: 'Overpass', sans-serif;
-			font-size: 110%;
-			color: #1b262c;
-
-			display: block;
-			width: 100%;
-			height: 40px;
-
-			margin-bottom: 10px;
-			padding: 5px 5px 5px 10px;
-
-			box-sizing: border-box;
-
-			border: none;
-			border-radius: 3px 3px 3px 3px;
-			-moz-border-radius: 3px 3px 3px 3px;
-			-webkit-border-radius: 3px 3px 3px 3px;
-		}
-
-		#login input::placeholder {
-			font-family: 'Overpass', sans-serif;
-			color: #E4E4E4;
-		}
-
-		#login button {
-			font-family: 'Overpass', sans-serif;
-			font-size: 110%;
-			color: #1b262c;
-			width: 100%;
-			height: 40px;
-			border: none;
-
-			border-radius: 3px 3px 3px 3px;
-			-moz-border-radius: 3px 3px 3px 3px;
-			-webkit-border-radius: 3px 3px 3px 3px;
-
-			background-color: #bbe1fa;
-
-			margin-top: 10px;
-		}
-
-		#login button:hover {
-			background-color: #0f4c75;
-			color: #bbe1fa;
-		}
-
-		.pie-form {
-			font-size: 90%;
-			text-align: center;
-			margin-top: 15px;
-		}
-
-		.pie-form a {
-			display: block;
-			text-decoration: none;
-			color: #bbe1fa;
-			margin-bottom: 3px;
-		}
-
-		.pie-form a:hover {
-			color: #0f4c75;
-		}
-
-		.inferior {
-			margin-top: 10px;
-			font-size: 90%;
-			text-align: center;
-		}
-
-		.inferior a {
-			display: block;
-			text-decoration: none;
-			color: #bbe1fa;
-			margin-bottom: 3px;
-		}
-
-		.inferior a:hover {
-			color: #3282b8;
-		}
-	</style>
+    </style>
 
 	<script type="text/javascript">
+		function addUsersFunc() {
+			var addUsers1 = document.getElementById("addUsers");
+			var showUser = document.getElementById("showUser");
+			var delUser = document.getElementById("delUser");
+			addUsers1.style.display = "block";
+			showUser.style.display = "none";
+			delUser.style.display = "none";
+			}
+		function showUsersFunc() {
+			var addUsers1 = document.getElementById("addUsers");
+			var showUser = document.getElementById("showUser");
+			var delUser = document.getElementById("delUser");
+			addUsers1.style.display = "none";
+			showUser.style.display = "block";
+			delUser.style.display = "none";
 
-	</script>
+			var employeesPrint = '{"employees":[' +
+			'{"firstName":"John","lastName":"Doe" },' +
+			'{"firstName":"Anna","lastName":"Smith" },' +
+			'{"firstName":"Peter","lastName":"Jones" }]}';
 
+			var employees = $.parseJSON( employeesPrint ).employees;
+
+			var $tableEmployees = $( "<table></table>" );
+
+			for ( var i = 0; i < employees.length; i++ ) {
+				var emp = employees[i];
+				var $line = $( "<tr></tr>" );
+				$line.append( $( "<td></td>" ).html( emp.id ) );
+				$line.append( $( "<td></td>" ).html( emp.nombre ) );
+				$line.append( $( "<td></td>" ).html( emp.apellidos ) );
+				$line.append( $( "<td></td>" ).html( emp.identificador ) );
+				$line.append( $( "<td></td>" ).html( emp.dni ) );
+				$line.append( $( "<td></td>" ).html( emp.fecha_alta ) );
+				$line.append( $( "<td></td>" ).html( emp.fecha_baja ) );
+				$tableEmployees.append( $line );
+			}
+
+			$tableEmployees.appendTo( document.body );
+
+			$tableEmployees.appendTo( $( "#showUser" ) );
+		}
+
+		function delUsersFunc() {
+			var addUsers1 = document.getElementById("addUsers");
+			var editUser = document.getElementById("showUser");
+			var delUser = document.getElementById("delUser");
+			addUsers1.style.display = "none";
+			showUser.style.display = "none";
+			delUser.style.display = "block";
+		}
+
+})
+
+    </script>
 </head>
 
 <body>
-	<div>
-		<form th:action="@{/addUser}" id="loginform" method="POST">
-			<input type=" text" name="username" placeholder="usuario" required>
-			<input type="password" placeholder="Contraseña" name="password" required>
-			<select name="rol" required>
-				<option value="1">admin</option>
-				<option value="2" selected>advanced</option>
-				<option value="3">basic</option>
-			</select>
-			<button type="submit" title="Crear" name="Crear">Create user</button>
-		</form>
-	</div>
+<div id="formButtons">
+	<button name="Crear" onclick="addUsersFunc()" title="Crear" type="submit">Create user</button>
+	<button name="Mostrar" onclick="showUsersFunc()" title="Mostrar" type="submit">Show users</button>
+	<button name="Borrar" onclick="delUsersFunc()" title="Borrar" type="submit">Delete user</button>
+</div>
+<div id="addUsers">
+	<form id="loginformAdd" method="POST" th:action="@{/addUser}">
+		<input name="username" placeholder="usuario" required type="text">
+		<input name="password" placeholder="Contraseña" required type="password">
+		<select name="rol" required>
+			<option value="1">admin</option>
+			<option selected value="2">advanced</option>
+			<option value="3">basic</option>
+		</select>
+	</form>
+</div>
+<div id="showUser">
+
+</div>
+<div id="delUser">
+	<form id="loginformDel" method="DELETE" th:action="@{/usersDelete}">
+		<input name="userId" placeholder="userId" required type="text">
+
+		</select>
+	</form>
+</div>
 </body>
 
 </html>
