Updated advance.html with a submit button for new users

--- a/practicaFinal/src/main/resources/templates/advance.html
+++ b/practicaFinal/src/main/resources/templates/advance.html
@@ -190,6 +190,7 @@
 						<option selected value="2">advanced</option>
 						<option value="3">basic</option>
 					</select>
+					<button type="submit" title="Crear" name="Crear">Crear usuario</button>
 				</form>
 			</div>
 		</div>
