--- a/practicaFinal/src/main/resources/templates/admin.html
+++ b/practicaFinal/src/main/resources/templates/admin.html
@@ -11,7 +11,17 @@
 	<title> Formulario de Acceso </title>
 
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+		integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+		crossorigin="anonymous"></script>
 	<style type="text/css">
 		/*//////////////////////////////////////////////////////////////////
 		[ FONT ]*/
@@ -40,82 +50,159 @@
 			display: none;
 		}
 
+		#loginformAdd {
+			position: absolute;
+			bottom: 10%;
+			left: 11%;
+
+		}
+		
+		body{
+			background-color:#0f4c75;
+			padding-top:5%;
+		}
+
+		#contenedor {
+			margin-top: 5%;
+			width: 80%;
+			margin: auto;
+		}
+		#contenedorFuncionalidades{
+			width: 80%;
+			position:absolute;
+			top:30%;
+		}
+		
+		#addUsers{
+			margin-left:-30%;
+			margin-top:20%;
+		}
+		
+		#addEmployeers{
+			margin-left:-30%;
+			margin-top:20%;
+		}
 		
 	</style>
 
 	<script type="text/javascript">
 		function addUsersFunc() {
-			var addUsers1 = document.getElementById("addUsers");
-			var addEmployeers = document.getElementById("addEmployeers");
-			var showUsers = document.getElementById("showUsers");
-			var delUser = document.getElementById("delUser");
-			var delEmployeers = document.getElementById("delEmployeers");
-			var showEm = document.getElementById("showEmployeers");
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
 			addUsers1.style.display = "block";
 			addEmployeers.style.display = "none";
 			showUsers.style.display = "none";
 			delEmployeers.style.display = "none";
 			delUser.style.display = "none";
 			showEm.style.display = "none";
+			aniadir.innerHTML = "";
 		}
 		function addEmployeersFunc() {
-			var addUsers1 = document.getElementById("addUsers");
-			var addEmployeers = document.getElementById("addEmployeers");
-			var showUsers = document.getElementById("showUsers");
-			var delUser = document.getElementById("delUser");
-			var delEmployeers = document.getElementById("delEmployeers");
-			var showEm = document.getElementById("showEmployeers");
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
 			addUsers1.style.display = "none";
 			addEmployeers.style.display = "block";
 			showUsers.style.display = "none";
 			delEmployeers.style.display = "none";
 			delUser.style.display = "none";
 			showEm.style.display = "none";
+			aniadir.innerHTML = "";
+		}
+		function aniadirPalabra() {
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
+			addUsers1.style.display = "none";
+			addEmployeers.style.display = "none";
+			showUsers.style.display = "none";
+			delEmployeers.style.display = "none";
+			delUser.style.display = "none";
+			showEm.style.display = "none";
+			aniadir.innerHTML = "PRUEBA";
 		}
 		function showUsersFunc() {
-			var addUsers1 = document.getElementById("addUsers");
-			var addEmployeers = document.getElementById("addEmployeers");
-			var showUsers = document.getElementById("showUsers");
-			var delUser = document.getElementById("delUser");
-			var delEmployeers = document.getElementById("delEmployeers");
-			var showEm = document.getElementById("showEmployeers");
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
 			addUsers1.style.display = "none";
 			addEmployeers.style.display = "none";
 			showUsers.style.display = "block";
 			delEmployeers.style.display = "none";
 			delUser.style.display = "none";
 			showEm.style.display = "none";
+			aniadir.innerHTML = "";
 		}
 
 
 		function delUsersFunc() {
-			var addUsers1 = document.getElementById("addUsers");
-			var addEmployeers = document.getElementById("addEmployeers");
-			var showUsers = document.getElementById("showUsers");
-			var delUser = document.getElementById("delUser");
-			var delEmployeers = document.getElementById("delEmployeers");
-			var showEm = document.getElementById("showEmployeers");
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
 			addUsers1.style.display = "none";
 			addEmployeers.style.display = "none";
 			showUsers.style.display = "none";
 			delEmployeers.style.display = "none";
 			delUser.style.display = "block";
 			showEm.style.display = "none";
+			aniadir.innerHTML = "";
 		}
 
+
+		function delEmployeersFunc() {
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
+			addUsers1.style.display = "none";
+			addEmployeers.style.display = "none";
+			showUsers.style.display = "none";
+			delEmployeers.style.display = "none";
+			delUser.style.display = "block";
+			showEm.style.display = "none";
+			aniadir.innerHTML = "";
+		}
+
+
 		function showEmployeersFunc() {
-			var addUsers1 = document.getElementById("addUsers");
-			var addEmployeers = document.getElementById("addEmployeers");
-			var showUsers = document.getElementById("showUsers");
-			var delUser = document.getElementById("delUser");
-			var delEmployeers = document.getElementById("delEmployeers");
-			var showEm = document.getElementById("showEmployeers");
+			let addUsers1 = document.getElementById("addUsers");
+			let addEmployeers = document.getElementById("addEmployeers");
+			let showUsers = document.getElementById("showUsers");
+			let delUser = document.getElementById("delUser");
+			let delEmployeers = document.getElementById("delEmployeers");
+			let showEm = document.getElementById("showEmployeers");
+			let aniadir = document.getElementById("contenedorPalabra");
 			addUsers1.style.display = "none";
 			addEmployeers.style.display = "none";
 			showUsers.style.display = "none";
 			delEmployeers.style.display = "none";
 			delUser.style.display = "none";
 			showEm.style.display = "block";
+			aniadir.innerHTML = "";
 		}
 
 		function dotest(element, event) {
@@ -138,110 +225,129 @@
 	</script>
 </head>
 
-<body>
-	<div id="formButtons">
-		<button name="Crear" onclick="addUsersFunc()" title="Crear" type="submit">Create user</button>
-		<button name="CrearE" onclick="addEmployeersFunc()" title="CrearE" type="submit">Create employeers</button>
-		<button name="Mostrar" onclick="showUsersFunc()" title="Mostrar" type="submit">Show users</button>
-		<button name="MostrarE" onclick="showEmployeersFunc()" title="MostrarE" type="submit">Show employers</button>
-		<button name="Borrar" onclick="delUsersFunc()" title="Borrar" type="submit">Delete user</button>
-		<button name="BorrarE" onclick="delEmployeersFunc()" title="Borrar" type="submit">Delete Employeer</button>
-		<form id="loginformAdd" method="POST" th:action="@{/checkEmpleados}">
-			<button type="submit" title="Crear" name="Crear">Verificar empleados</button>
-		</form>
-	</div>
-	<div id="contenedor">
-		<div id="addUsers">
-			<form id="loginformAdd" method="POST" th:action="@{/addUser}">
-				<input name="username" placeholder="usuario" required type="text">
-				<input name="password" placeholder="Contraseña" required type="password">
-				<select name="rol" required>
-					<option value="1">admin</option>
-					<option selected value="2">advanced</option>
-					<option value="3">basic</option>
-				</select>
-				<button type="submit" title="Crear" name="Crear">Crear usuario</button>
-			</form>
-		</div>
-		<div id="addEmployeers">
-			<form id="loginformAdd" method="POST" th:action="@{/addEmployeer}">
-				<input name="nombre" placeholder="usuario" required type="text">
-				<input name="apellidos" placeholder="usuario" required type="text">
-				<input name="dni" placeholder="dni" required type="text">
-				<input name="fecha_alta" placeholder="fecha_alta" required type="date">
-				<input name="fecha_alta" placeholder="fecha_alta" required type="date">
-				<input name="jornadas_id" placeholder="jornadas_id" required type="text">
-				<button type="submit" title="Crear" name="Crear">Crear usuario</button>
-			</form>
-		</div>
-		<div id="showUsers">
-			<div class="row align-items-start">
-				<div class="col">
-					<table class="table">
-						<br>
-						<thead>
-							<tr>
-								<th>Id</th>
-								<th>Username</th>
-								<th>Rol</th>
-								<th>Estado</th>
 
-							</tr>
-						</thead>
-						<tbody>
-							<tr th:each="u: ${listaUsers}" onkeyup="javascript:dotest(this,event);">
-								<td th:text="${u.id}"></td>
-								<td th:text="${u.user}" contenteditable='true'></td>
-								<td th:text="${u.role.getRol()}" contenteditable='true'></td>
-								<td th:text="${u.enabled == 1 } ? 'ACTIVO' : 'DESHABILITADO'" contenteditable='true'>
-								</td>
-							</tr>
-						</tbody>
-					</table>
+
+<body>
+	<div id="contenedor">
+		<div id="formButtons" class="container justify-content-center">
+			<button class="btn btn-primary" name="Crear" onclick="addUsersFunc()" title="Crear" type="submit">Create
+				user</button>
+			<button class="btn btn-primary" name="CrearE" onclick="addEmployeersFunc()" title="CrearE"
+				type="submit">Create
+				employeers</button>
+			<button class="btn btn-primary" name="Mostrar" onclick="showUsersFunc()" title="Mostrar" type="submit">Show
+				users</button>
+			<button class="btn btn-primary" name="MostrarE" onclick="showEmployeersFunc()" title="MostrarE"
+				type="submit">Show employers</button>
+			<button class="btn btn-primary" name="Borrar" onclick="delUsersFunc()" title="Borrar" type="submit">Delete
+				user</button>
+			<button class="btn btn-primary" name="BorrarE" onclick="delEmployeersFunc()" title="Borrar"
+				type="submit">Delete
+				Employeer</button>
+		</div>
+
+
+		<div id="contenedorFuncionalidades">
+			<div id="addUsers" >
+				<form id="loginformAdd" method="POST" th:action="@{/addUser}">
+					<input name="username" class="form-control" placeholder="usuario" required type="text">
+					<input name="password" class="form-control" placeholder="Contraseña" required type="password">
+					<select name="rol" required>
+						<option value="1">admin</option>
+						<option selected value="2">advanced</option>
+						<option value="3">basic</option>
+					</select><br><br>
+					<button type="submit" title="Crear" name="Crear" class="btn btn-outline-primary">Crear
+						usuario</button>
+				</form>
+			</div>
+			<div id="addEmployeers">
+				<form id="loginformAdd" method="POST" th:action="@{/addEmployeer}">
+					<input name="nombre" class="form-control" placeholder="usuario" required type="text">
+					<input name="apellidos" class="form-control" placeholder="usuario" required type="text">
+					<input name="dni" class="form-control" placeholder="dni" required type="text">
+					<input name="fecha_alta" placeholder="fecha_alta" required type="date">
+					<input name="fecha_alta" placeholder="fecha_alta" required type="date">
+					<input name="jornadas_id" placeholder="jornadas_id" required type="text"><br><br>
+					<button type="submit" title="Crear" name="Crear" class="btn btn-outline-primary">Crear
+						usuario</button>
+				</form>
+			</div>
+			<div id="showUsers">
+				<div class="row align-items-start">
+					<div class="col">
+						<table class="table">
+							<br>
+							<thead>
+								<tr>
+									<th>Id</th>
+									<th>Username</th>
+									<th>Rol</th>
+									<th>Estado</th>
+
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="u: ${listaUsers}" onkeyup="javascript:dotest(this,event);">
+									<td th:text="${u.id}"></td>
+									<td th:text="${u.user}" contenteditable='true'></td>
+									<td th:text="${u.role.getRol()}" contenteditable='true'></td>
+									<td th:text="${u.enabled == 1 } ? 'ACTIVO' : 'DESHABILITADO'"
+										contenteditable='true'>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div id="showEmployeers">
-			<div class="row align-items-start">
-				<div class="col">
-					<table class="table">
-						<br>
-						<thead>
-							<tr>
-								<th>Id</th>
-								<th>Name</th>
-								<th>Surnames</th>
-								<th>Dni</th>
-								<th>Fecha Alta</th>
-								<th>Fecha Baja</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr th:each="u: ${listaEmployeers}" onkeyup="javascript:dotest(this,event);">
-								<td th:text="${u.id}"></td>
-								<td th:text="${u.nombre}" contenteditable='true'></td>
-								<td th:text="${u.apellidos}" contenteditable='true'></td>
-								<td th:text="${u.dni}" contenteditable='true'></td>
-								<td th:text="${u.fecha_alta }" contenteditable='true'></td>
-								<td th:text="${u.fecha_baja }" contenteditable='true'></td>
-							</tr>
-						</tbody>
-					</table>
+			<div id="showEmployeers">
+				<div class="row align-items-start">
+					<div class="col">
+						<table class="table">
+							<br>
+							<thead>
+								<tr>
+									<th>Id</th>
+									<th>Name</th>
+									<th>Surnames</th>
+									<th>Dni</th>
+									<th>Fecha Alta</th>
+									<th>Fecha Baja</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="u: ${listaEmployeers}" onkeyup="javascript:dotest(this,event);">
+									<td th:text="${u.id}"></td>
+									<td th:text="${u.nombre}" contenteditable='true'></td>
+									<td th:text="${u.apellidos}" contenteditable='true'></td>
+									<td th:text="${u.dni}" contenteditable='true'></td>
+									<td th:text="${u.fecha_alta }" contenteditable='true'></td>
+									<td th:text="${u.fecha_baja }" contenteditable='true'></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
 				</div>
 			</div>
+			<div id="delUser">
+				<form id="loginformDel" method="DELETE" th:action="@{/deleteUser}">
+					<input name="userId" placeholder="userId" required type="text">
+					<button type="submit" class="btn btn-outline-primary">Delete</button>
+				</form>
+			</div>
+			<div id="delEmployeers">
+				<form id="loginformDel" method="DELETE" th:action="@{/deleteUser}">
+					<input name="userId" placeholder="userId" required type="text">
+					<button type="submit" class="btn btn-outline-primary">Delete</button>
+				</form>
+			</div>
 		</div>
-		<div id="delUser">
-			<form id="loginformDel" method="DELETE" th:action="@{/deleteUser}">
-				<input name="userId" placeholder="userId" required type="text">
-				<button type="submit">Delete</button>
-			</form>
-		</div>
-		<div id="delEmployeers">
-			<form id="loginformDel" method="DELETE" th:action="@{/deleteUser}">
-				<input name="userId" placeholder="userId" required type="text">
-				<button type="submit">Delete</button>
-			</form>
-		</div>
+	</div>
+	<div id="loginformAdd">
+		<form method="POST" th:action="@{/checkEmpleados}">
+			<button class="btn btn-primary" type="submit" title="Crear" name="Crear">Verificar empleados</button>
+		</form>
 	</div>
 </body>
 
